# untitled-rust-project

./: Cargo.toml
data/: buildings.yml  item_categories.yml  manifest.yml  materials.yml  skill_capabilities.yml  tiles.yml
data/living/: entities.yml  races.yml  traits.yml
src/: main.rs
src/input/: mod.rs
src/sim/: LAYOUT.md  generator.rs  mod.rs
src/sim/orders/: mod.rs
src/sim/world/: mod.rs
src/sim/world/class/: mod.rs
src/sim/world/data/: mod.rs
src/sim/world/entity/: mod.rs
src/sim/world/item/: mod.rs
src/sim/world/raw/: mod.rs
src/sim/world/tilemap/: mod.rs
src/ui/: menus.rs  mod.rs  settings.rs
