[package]
name = "mechanofence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[dependencies]
bevy = { path = "./src/bevy", default-features = true}
bevy_egui = {version="*", path = "./src/bevy_egui"}
bevy_event_set = {version="*", path = "./src/bevy-event-set"}
rand = "0.8.4"
ron = {version="*"}
serde = {version="1.0", features = ["derive"]}
serde_yaml = "0.8"
simdnoise = {version="*"}
lazy_static = "1.4.0"
enum_dispatch = "0.3.7"
bevy_mod_raycast = {version="*", path = "./src/bevy_mod_raycast"}
#bevy-building-blocks = { path = "./src/bevy-building-blocks" }

#[dependencies.building-blocks]
#git = "https://github.com/bonsairobo/building-blocks"
#branch = "main"
## path = "../building-blocks"
## version = "0.2.1"
#default-features = false
#features = ["lz4", "mesh", "sdfu", "search", "sled", "ncollide", "sled-snapshots", "vox-format", "image"]

[dev-dependencies]
criterion = "*"

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
]

native = [
    "bevy/bevy_wgpu",
]

dev = [
    "bevy/dynamic",
    "native",
]